--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "parking management system",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-dev":"nodemon index.js"
   },
   "keywords": [
     "parking",
