--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "fuse.js": "^7.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-geolocated": "^4.2.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-spinners": "^0.14.1",
