--- a/Backend/package.json
+++ b/Backend/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.7",
     "razorpay": "^2.9.5"
   }
